// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Player /> renders the <Player /> with a bunny video 1`] = `
<div
  class="player__Container-sc-1c49yiu-0"
>
  <button
    class="player__Button-sc-1c49yiu-4 gMeeIa"
  >
    Play
  </button>
</div>
`;

exports[`<Profiles /> renders the <Profiles /> with populated data 1`] = `
<div
  class="profiles__Container-bxtkkv-0 fGoDNJ"
>
  <h1
    class="profiles__Title-bxtkkv-1 llHZal"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-bxtkkv-2 hybA-dO"
  >
    <li
      class="profiles__Item-bxtkkv-5 kJPhXM"
    >
      <img
        class="profiles__Picture-bxtkkv-4 kpLrAV"
        data-testid="profile-picture"
        src="/images/users//images/karl.png.png"
      />
      <p
        class="profiles__Name-bxtkkv-3 jQTvVi"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> renders the <Profiles /> with populated data but misc profile image 1`] = `
<div
  class="profiles__Container-bxtkkv-0 fGoDNJ"
>
  <h1
    class="profiles__Title-bxtkkv-1 llHZal"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-bxtkkv-2 hybA-dO"
  >
    <li
      class="profiles__Item-bxtkkv-5 kJPhXM"
    >
      <img
        class="profiles__Picture-bxtkkv-4 kpLrAV"
        data-testid="profile-picture-misc"
        src="/images/misc/loading.gif"
      />
      <p
        class="profiles__Name-bxtkkv-3 jQTvVi"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;
